# examviewer

./: .gitignore  GEMINI.md  PRD.md  README.md
backend/: crud.py  database.py  main.py  models.py  pyproject.toml  watcher.py
backend/utils/: file_parser.py
frontend/: main.js  next.config.js  package-lock.json  package.json  preload.js
frontend/src/app/: page.tsx
frontend/src/components/: LoadingSpinner.tsx  ResultsGrid.tsx  SearchBar.tsx  StatusBar.tsx  ThumbnailCard.tsx
